# agente_ventes

./: .dockerignore  .env  .env.example  Dockerfile  README.md  compose.yaml  problemas.md  pyproject.toml  requirements.txt  run.py
src/ventas/: __init__.py  logger.py  main.py  metrics.py  schemas.py
src/ventas/agent/: __init__.py  agent.py  content.py  context.py  middleware.py
src/ventas/agent/prompts/: __init__.py  ventas_system.j2
src/ventas/agent/runtime/: __init__.py  _cache.py  _llm.py  middleware.py
src/ventas/config/: __init__.py  circuit_breakers.py  config.py
src/ventas/infra/: __init__.py  _resilience.py  circuit_breaker.py  http_client.py
src/ventas/prompts/: __init__.py  ventas_system.j2
src/ventas/services/: __init__.py  _resilience.py  api_informacion.py  busqueda_productos.py  categorias.py  circuit_breaker.py  contexto_negocio.py  costo_envio.py  http_client.py  metodos_pago.py  preguntas_frecuentes.py  registrar_pedido.py  sucursales.py
src/ventas/services/prompt_data/: __init__.py  categorias.py  contexto_negocio.py  costo_envio.py  metodos_pago.py  preguntas_frecuentes.py  sucursales.py
src/ventas/tool/: __init__.py  tools.py
